@@ -1,3 +1,10 @@
+2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Debugging.Client/BreakpointStore.cs: Fire the change event when
+	  a breakpoint is modified.
+	* Mono.Debugging.Client/DebuggerSession.cs: Made GetBreakpointHandle
+	  protected so it can be used by add-ins.
+
 2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Debugging.Client/BreakpointStore.cs,
